# Vitia_Invenire_AI

./: .gitignore  README.md  golden_image.ps1  install.ps1  pyproject.toml  requirements.txt
doc/: ARCHITECTURE.md  ASSESSMENT.md  ASSESSMENT_RESPONSE.md
src/vitia_invenire/: __init__.py  __main__.py  cli.py  config.py  engine.py  models.py  platform.py
src/vitia_invenire/checks/: __init__.py  acpi_tables.py  app_control_policy.py  base.py  bios_config.py  bitlocker_status.py  bits_jobs.py  boot_config.py  browser_audit.py  browser_extensions.py  catalog_integrity.py  certificate_store.py  ciscat_scan.py  com_hijacking.py  credential_exposure.py  data_staleness.py  defender_status.py  dll_hijack_detect.py  dma_protection.py  dpapi_audit.py  driver_integrity.py  efi_partition.py  etw_audit.py  event_log_config.py  executable_hashing.py  exploit_protection.py  file_integrity.py  firewall.py  firmware.py  firmware_currency.py  firmware_info.py  ghost_devices.py  hardening_kitty.py  hardware_inventory.py  hash_lookup.py  hotfix_audit.py  integrity_check.py  intel_amt.py  intel_boot_guard.py  ipv6_audit.py  (+42 more)
src/vitia_invenire/collectors/: __init__.py  command.py  powershell.py  registry.py  wmi_collector.py
src/vitia_invenire/data/: __init__.py  check_config.yaml  critical_kbs.json  kernel_binaries.json  known_bad_certs.json  known_debug_devices.json  known_good_certs.json  known_malicious_extensions.json  known_pci_vendors.json  lol_drivers.json  (+5 more)
tests/: __init__.py  conftest.py  test_engine.py  test_models.py
tests/test_collectors/: test_command.py  test_registry.py
(+10 files in other folders)
